--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "@babel/preset-typescript": "7.18.6",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.7",
         "@reduxjs/toolkit": "1.9.1",
-        "@svgr/webpack": "6.3.1",
+        "@svgr/webpack": "8.1.0",
         "@tanstack/react-table": "^8.5.13",
-        "@types/react-bootstrap": "^0.32.30",
+        "@types/react-beautiful-dnd": "^13.1.4",
+        "@types/react-bootstrap": "^0.32.32",
         "async-mutex": "^0.4.0",
         "axios": "0.27.2",
         "bootstrap": "5.1.3",
@@ -27,15 +28,16 @@
         "csstype": "^3.1.2",
         "formik": "^2.2.9",
         "i18next": "21.6.3",
-        "luxon": "^3.1.0",
+        "luxon": "3.2.1",
         "react": "18.2.0",
-        "react-bootstrap": "2.0.2",
+        "react-beautiful-dnd": "^13.1.1",
+        "react-bootstrap": "2.8.0",
+        "react-datepicker": "^4.18.0",
         "react-dom": "18.2.0",
         "react-i18next": "11.14.3",
-        "react-loading-skeleton": "^3.1.0",
+        "react-loading-skeleton": "^3.3.1",
         "react-redux": "8.0.2",
         "react-router-dom": "6.3.0",
-        "react-select": "^5.7.0",
         "react-toastify": "^9.1.1",
         "redux": "4.2.0",
         "regenerator-runtime": "0.13.9",
@@ -43,29 +45,31 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "@babel/core": "7.18.9",
-        "@babel/preset-env": "7.18.9",
-        "@sentry/webpack-plugin": "2.0.0",
-        "@types/luxon": "^3.1.0",
-        "@types/react": "18.0.17",
-        "@types/react-dom": "18.0.6",
+        "@babel/core": "7.22.20",
+        "@babel/preset-env": "7.22.20",
+        "@types/luxon": "3.2.1",
+        "@types/react": "^18.2.22",
+        "@types/react-beautiful-dnd": "13.1.2",
+        "@types/react-datepicker": "^4.8.0",
+        "@types/react-dom": "^18.2.7",
         "babel-loader": "8.2.5",
         "compression-webpack-plugin": "10.0.0",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "6.7.1",
         "file-loader": "6.2.0",
-        "fork-ts-checker-webpack-plugin": "7.2.13",
+        "fork-ts-checker-webpack-plugin": "8.0.0",
         "html-webpack-plugin": "5.5.0",
         "prettier": "2.7.1",
+        "react-datepicker": "^4.8.0",
         "react-refresh": "0.14.0",
         "sass": "1.54.0",
         "sass-loader": "13.0.2",
         "style-loader": "3.3.1",
         "terser-webpack-plugin": "^5.3.6",
         "typescript": "^4.7.4",
-        "webpack": "5.74.0",
-        "webpack-cli": "4.10.0",
-        "webpack-dev-server": "4.9.3",
-        "webpack-merge": "5.8.0"
+        "webpack": "5.88.2",
+        "webpack-cli": "5.1.4",
+        "webpack-dev-server": "4.15.1",
+        "webpack-merge": "5.9.0"
     }
 }
